# search-service

./: README copy.md  README.md
app/: README.md  pyproject.toml
app/app/: main.py
app/app/api/: common.py
app/app/api/v1/: api.py  genres.py  movies.py  persons.py
app/app/api/v1/endpoints/: genres.py  movies.py  persons.py
app/app/core/: config.py
app/app/db/: elastic.py
app/app/interfaces/: ifilm_service.py  igenre_service.py  iperson_service.py
app/app/models/: film.py  genre.py  person.py
app/app/services/: base_service.py  cache_manager.py  dependencies.py  elasticsearch_service.py  film_service.py  genre_service.py  person_service.py
infra/elastic/elasticsearch/: config.yml
