[tool.poetry]
name = "async-api"
version = "0.1.0"
description = "Movies admin"
authors = ["Denis Shvetsov <den.shvetsov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "4.4.2"
fastapi = "0.61.1"
orjson = "^3.9.10"
uvicorn = "^0.25.0"
uvloop = "^0.19.0"
elasticsearch = "^8.11.1"
aiohttp = "^3.9.1"
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pytest = "^8.0.0"
httpx = "^0.26.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
